[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "config"
version = "0.2.4"
description = "Framework agnostic configuration for apps and microservices"
authors = ["Kirill Sumorokov <sumorokov.k@gmail.com>"]
license = "MIT"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
  { include = "config", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6"
ujson = "^1.35"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins-unleashed = "*"
flake8-comprehensions = "*"
flake8-import-order = "*"
flake8-print = "*"
flake8-pytest = "*"
mypy = "*"
pytest = "*"
rope = "*"
ipython = "^7.12.0"
